--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           pip install fastapi uvicorn chromadb requests
 
       - name: Rebuild embeddings
-        run: python embed.py
+        run: python embeddings.py
 
       - name: Start API in mock mode
         run: |
