--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: RAG CI Pipeline
 on:
   push:
     paths:
-      - 'k8s.txt'
+      - 'docs/**'       # Changed from 'k8s.txt'
       - 'app.py'
-      - 'embeddings.py'
+      - 'embed_docs.py' # Changed from 'embeddings.py'
 
 jobs:
   test-and-build:
@@ -25,7 +25,7 @@ jobs:
           pip install fastapi uvicorn chromadb requests
 
       - name: Rebuild embeddings
-        run: python embeddings.py
+        run: python embed_docs.py  # Changed from embeddings.py
 
       - name: Start API in mock mode
         run: |
